data/forge_javadoc/1.7.10/processed/net_minecraft_client_gui_GuiYesNo.md
# GuiYesNo

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.GuiYesNo

## Class signature

```java
public class GuiYesNo extends GuiScreen
```

## Constructors

- `GuiYesNo(GuiYesNoCallback p_i1082_1_, java.lang.String p_i1082_2_, java.lang.String p_i1082_3_, int p_i1082_4_)`
- `GuiYesNo(GuiYesNoCallback p_i1083_1_, java.lang.String p_i1083_2_, java.lang.String p_i1083_3_, java.lang.String p_i1083_4_, java.lang.String p_i1083_5_, int p_i1083_6_)`

## Methods

- `protected void actionPerformed(GuiButton p_146284_1_)`
- `void drawScreen(int p_73863_1_, int p_73863_2_, float p_73863_3_)`
- `void func_146350_a(int p_146350_1_)`
- `void initGui()`
- `void updateScreen()`

## Fields

- `protected java.lang.String cancelButtonText`
- `protected java.lang.String confirmButtonText`
- `protected java.lang.String field_146351_f`
- `protected int field_146357_i`
- `protected GuiYesNoCallback parentScreen`